Update the comments for hostname

--- a/Kubeadm-Master.conf
+++ b/Kubeadm-Master.conf
@@ -4,7 +4,7 @@ localAPIEndpoint:
   advertiseAddress: 0.0.0.0
   bindPort: 8443 # Change master port as per your requirements
 nodeRegistration:
-  name: "$(hostname -f)" # put the master hostname like ip-xx.xx.xx.xx.ec.internal
+  name: "" # put the master hostname like ip-xx.xx.xx.xx.ec.internal or run the command "hostname -f"
   kubeletExtraArgs:
     cloud-provider: aws # Cloud provider, enable it if required
     cni-conf-dir: /etc/cni/net.d
